[package]
name = "as3_parser"
version = "0.4.45"
edition = "2021"
authors = ["hydroper <matheusdiasdesouzads@gmail.com>"]
repository = "https://github.com/hydroper/as3parser"
keywords = ["actionscript", "as3", "parser"]
description = "ActionScript 3 parser"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "as3_parser"
path = "lib.rs"

[dependencies]
bitflags = { version = "2.4.1", features = ["serde"] }
bytes = "1"
file_paths = "1.0.0"
conv = "0.3.3"
htmlentity = "1.3.1"
late_format = "1.0.0"
maplit = "1.0.2"
num-bigint = "0.4"
num-derive = "0.4.1"
num-traits = "0.2.17"
lazy-regex = "3.0.2"
lazy_static = "1.4.0"
unicode-general-category = "0.6.0"
by_address = "1.1.0"
serde = { version = "1.0.192", features = ["rc", "derive"] }
serde_json = "1.0.108"
hydroper_source_text = "1.0.3"
