[package]
name = "as3_parser_test"
version = "0.4.0"
edition = "2021"
authors = ["hydroper <matheusdiasdesouzads@gmail.com>"]
repository = "https://github.com/hydroper/as3_parser"
keywords = ["actionscript", "as3", "parser"]
description = "ActionScript 3 Parser Test"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "as3_parser_test"
path = "main.rs"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
file_paths = "1.0.0"
as3_parser = { path = "../parser", version = "0.5" }
maplit = "1.0.2"
serde = { version = "1.0.192", features = ["rc", "derive"] }
serde_json = "1.0.108"
