[package]
name = "as3_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
file_paths = "0.1.2"
as3_arena = { path = "../arena" }
conv = "0.3.3"
