[package]
name = "as3_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
file_paths = "0.1.2"
as3_arena = { path = "../arena" }
conv = "0.3.3"
maplit = "1.0.2"
lazy-regex = "3.0.2"
lazy_static = "1.4.0"
unicode-general-category = "0.6.0"
