[package]
name = "as3_parser"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["hydroper <matheusdiasdesouzads@gmail.com>"]
repository = "https://github.com/hydroper/as3"
keywords = ["actionscript", "parser"]
description = "ActionScript 3 parser and verifier"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.1"
file_paths = "0.1.2"
conv = "0.3.3"
maplit = "1.0.2"
lazy-regex = "3.0.2"
lazy_static = "1.4.0"
unicode-general-category = "0.6.0"
by_address = "1.1.0"